hiwonder_ws/log/build_2025-07-18_19-53-44/hello_world_demo/stderr.log
  File "/home/ubuntu/hiwonder_ws/install/hello_world_demo/lib/python3.10/site-packages/hello_world_demo/hello_world.py", line 8
    def_init_(self):
                   ^
SyntaxError: invalid syntax

